<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:indeterminateOnly="true"
        app:layout_constraintTop_toTopOf="parent"
        app:trackThickness="4dp" />

    <TextView
        android:id="@+id/loading_title"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/world_wonder_loading_view_holder_loading_title"
        app:layout_constraintTop_toBottomOf="@id/progress" />

    <TextView
        android:id="@+id/error_title"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/world_wonder_loading_view_holder_error_title"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/error_update"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/world_wonder_loading_error_retry_button_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_title" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="loading_title,progress" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/error"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="error_title, error_update" />
</androidx.constraintlayout.widget.ConstraintLayout>